--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ nav a:hover::after {
     background-position: center;
     background-attachment: fixed;
     height: 109vh;
-    width: max-width;
+    width: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
