--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     scroll-behavior: smooth;
     box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
 }
 
 .body {
